--- a/www/signINandUp.html
+++ b/www/signINandUp.html
@@ -35,7 +35,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover" />
     <meta name="color-scheme" content="light dark" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/SignUpandSignIn.css" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -45,7 +45,7 @@
 <body class="">
 
 
-    <div class="ss">
+    <div class="ss d-flex justify-content-center">
         <div class="">
             <img src="./img/logo.svg" alt="Logo" />
         </div>
@@ -59,33 +59,26 @@
     <div class="d-flex justify-content-center">
         <p>Thousand of people are usign silent moon for smalls meditation </p>
     </div>
-    <div class="d-flex justify-content-center">
-        <button class="signupbtn" onclick="return callSignUpPage();"> Sign Up</button>
+    <div class="d-flex justify-content-center ">
+        <button class="signupbtn cursorhover" onclick="return callSignUpPage();"> Sign Up</button>
     </div>
     <br>
-    <div class="d-flex justify-content-center">
-        <p>ALREADY HAVE AN ACCOUNT? <a href="#" onclick="return callLoginPage();">LOG IN</a></p>
+    <div class="d-flex justify-content-center ">
+        <p onclick="return callLoginPage();">ALREADY HAVE AN ACCOUNT? <span id="loginbtn" class="cursorhover"style="color: blue ;">LOG IN</span> </p>
     </div>
 
 
 <script>
-    function callLoginPage(){
-  // window.location="login.html"
-  window.addEventListener("load", () => {
-    document.querySelector("#myButton").addEventListener("click", e => {
-        alert("Clicked!");
-        // Can also cancel the event and manually navigate
-        e.preventDefault();
-        window.location = "login.html";
-    });
-});
+document.getElementById('loginbtn').addEventListener('click', callLoginPage)
+function callLoginPage(){
+    window.location="login.html"
 }
 function callSignUpPage(){
   window.location="signup.html"
 }
 </script>
     <!-- <script src="cordova.js"></script> -->
-    <script type="module" src="js/signINandUp.js"></script>
+    <!-- <script type="module" src="js/signINandUp.js"></script> -->
     <!-- Bootstrap JS  -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
