--- a/www/signup.html
+++ b/www/signup.html
@@ -20,15 +20,15 @@
 
     <div class="p-2 m-3 bg">
         <div>
-            <img src="./img/backarrow.svg" alt="backarrow image" />
+            <img id="backarrow" class="cursorhover" src="./img/backarrow.svg" alt="<-" />
         </div>
         <h1 class="p-2 row d-flex justify-content-center">Create your account</h1>
         <div class="d-flex justify-content-center">
-            <img class="p-2 row d-inline-flex justify-content-center" src="./img/facebooklogin.svg"
+            <img class="p-2 row d-inline-flex justify-content-center cursorhover" src="./img/facebooklogin.svg"
                 alt="facebooklogin button" />
         </div>
         <div class="d-flex justify-content-center">
-            <img class="p-2 row d-flex justify-content-center" onclick="signInWithRedirect();"
+            <img class="p-2 row d-flex justify-content-center cursorhover" onclick="signInWithRedirect();"
                 src="./img/googlelogin.svg" alt="googlelogin button" />
         </div>
     </div>
@@ -45,7 +45,7 @@
 
         </div>
         <div class="p-2 row d-flex justify-content-center">
-            <input class=" emailForm" type="email" name="emailAddress" id="emailAddress" required
+            <input class=" emailForm" type="email" name="emailAddress" id="email" required
                 placeholder="      Email Address" />
             <img class="" src="img/greentick.svg" id="emailtick"
                 style="margin-left: -30px; cursor: pointer;margin-top: 10px;"></i>
@@ -54,16 +54,17 @@
         <div class="p-2 row d-flex justify-content-center">
             <!-- <input class=" emailForm" type="password" name="password" id="password" placeholder="     Password" /> -->
             <input class="emailForm" type="password" name="password" autocomplete="current-password" required
-                id="id_password" placeholder="      Password">
+                id="password" placeholder="      Password">
             <img class="" src="img/passwordeye.svg" id="togglePassword"
                 style="margin-left: -30px; cursor: pointer;margin-top: 10px;"></i>
         </div>
         <div class="p-2 row d-flex justify-content-center">
-            <p>I have read the <a href="http://#">Privacy Policy</a> <input type="checkbox" name="privacy-policy" id="privacy-policy"></p>
+            <p>I have read the <a href="http://#">Privacy Policy</a> <input type="checkbox" name="privacy-policy"
+                    id="privacy-policy"></p>
         </div>
     </div>
-    <div class="d-flex justify-content-center">
-        <img src="./img/getstarted.svg" alt="Login button" />
+    <div class="d-flex justify-content-center cursorhover">
+        <img id="signupbtn" src="./img/getstarted.svg" alt="Login button" />
     </div>
 
     <!-- Inline firebase script -->
@@ -71,7 +72,7 @@
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
-        import { getAuth } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js";
+        import { getAuth, createUserWithEmailAndPassword ,onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js";
         // TODO: Add SDKs for Firebase products that you want to use
         // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -90,32 +91,59 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
+        const auth = getAuth(app);
 
-        document.getElementById('emailAddress').addEventListener('click', signUpUser)
+        // document.getElementById('signupbtn').addEventListener('click', signUpUser)
+        document.getElementById('signupbtn').addEventListener('click', choosetopic)
+
+        function choosetopic(){
+            window.location="choosetopic.html"
+        }
 
         function signUpUser() {
-            console.log('signup btn clicked')
-        }
+            let email = document.getElementById('email').value
+            let password = document.getElementById('password').value
 
-
-        function callLoginPage() {
-            // window.location="login.html"
-            window.addEventListener("load", () => {
-                document.querySelector("#myButton").addEventListener("click", e => {
-                    alert("Clicked!");
-                    // Can also cancel the event and manually navigate
-                    e.preventDefault();
-                    window.location = "login.html";
+            const auth = getAuth();
+            createUserWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    // Signed in 
+                    const user = userCredential.user;
+                    console.log(user);
+                    window.location = "choosetopic.html";
+                    // ...
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                    alert(`Error Occured ${errorMessage}`)
                 });
-            });
+        }
+        // Observer for user auth
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // User is signed in, see docs for a list of available properties
+                // https://firebase.google.com/docs/reference/js/firebase.User
+                const uid = user.uid;
+                console.log(user);
+                // ...
+            } else {
+                // User is signed out
+                // ...
+            }
+        });
+
+        // Back Button Code
+        document.getElementById('backarrow').addEventListener('click', backsignINandUp)
+        function backsignINandUp(){
+            window.location="signINandUp.html"
         }
 
-        function callSignUpPage() {
-            window.location = "signup.html"
-        }
 
+        // Text Input icons
         const togglePassword = document.querySelector('#togglePassword');
-        const password = document.querySelector('#id_password');
+        const password = document.querySelector('#password');
 
         togglePassword.addEventListener('click', function (e) {
             // toggle the type attribute
