--- a/www/signINandUp.html
+++ b/www/signINandUp.html
@@ -43,28 +43,25 @@
 </head>
 
 <body class="">
-
+    <div class="ss d-flex justify-content-center">
+        <h1>MindScape</h1>
+    </div>
 
     <div class="ss d-flex justify-content-center">
-        <div class="">
-            <img src="./img/logo.svg" alt="Logo" />
-        </div>
-        
-        
         <img class="" src="./img/signIn.svg" alt="SignIn Image" />
     </div>
-    <div class="d-flex justify-content-center">
-        <h2>We Are what we do</h2>
+    <div class="d-flex justify-content-center text-center">
+        <h2>We are what we do</h2>
     </div>
     <div class="d-flex justify-content-center">
-        <p>Thousand of people are usign silent moon for smalls meditation </p>
+        <h6 class="text-center">Thousand of people are using silent moon for smalls meditation </h6>
     </div>
     <div class="d-flex justify-content-center ">
         <button class="signupbtn cursorhover" onclick="return callSignUpPage();"> Sign Up</button>
     </div>
     <br>
     <div class="d-flex justify-content-center ">
-        <p onclick="return callLoginPage();">ALREADY HAVE AN ACCOUNT? <span id="loginbtn" class="cursorhover"style="color: blue ;">LOG IN</span> </p>
+        <p class="text-center" onclick="return callLoginPage();">ALREADY HAVE AN ACCOUNT? <span id="loginbtn" class="cursorhover"style="color: blue ;">LOG IN</span> </p>
     </div>
 
 
