--- a/www/signup.html
+++ b/www/signup.html
@@ -22,43 +22,43 @@
         <div>
             <img id="backarrow" class="cursorhover" src="./img/backarrow.svg" alt="<-" />
         </div>
-        <h1 class="p-2 row d-flex justify-content-center">Create your account</h1>
+        <h1 class="p-2   d-flex justify-content-center">Create your account</h1>
         <div class="d-flex justify-content-center">
-            <img class="p-2 row d-inline-flex justify-content-center cursorhover" src="./img/facebooklogin.svg"
+            <img class="p-2 cursorhover" src="./img/facebooklogin.svg"
                 alt="facebooklogin button" />
         </div>
         <div class="d-flex justify-content-center">
-            <img class="p-2 row d-flex justify-content-center cursorhover" onclick="signInWithRedirect();"
+            <img class="p-2   d-flex justify-content-center cursorhover" onclick="signInWithRedirect();"
                 src="./img/googlelogin.svg" alt="googlelogin button" />
         </div>
     </div>
     <br />
-    <div class="p-2 row d-flex justify-content-center">
+    <div class="p-2   d-flex justify-content-center">
         <p>OR LOG IN WITH EMAIL</p>
     </div>
     <br />
     <div>
-        <div class="p-2 row d-flex justify-content-center">
+        <div class="p-2   d-flex justify-content-center">
             <input class="emailForm" type="text" name="name" id="username" placeholder="      Name" required>
             <img class="" src="img/greentick.svg" id="emailtick"
                 style="margin-left: -30px; cursor: pointer;margin-top: 10px;"></i>
 
         </div>
-        <div class="p-2 row d-flex justify-content-center">
+        <div class="p-2   d-flex justify-content-center">
             <input class=" emailForm" type="email" name="emailAddress" id="email" required
                 placeholder="      Email Address" />
             <img class="" src="img/greentick.svg" id="emailtick"
                 style="margin-left: -30px; cursor: pointer;margin-top: 10px;"></i>
 
         </div>
-        <div class="p-2 row d-flex justify-content-center">
+        <div class="p-2   d-flex justify-content-center">
             <!-- <input class=" emailForm" type="password" name="password" id="password" placeholder="     Password" /> -->
             <input class="emailForm" type="password" name="password" autocomplete="current-password" required
                 id="password" placeholder="      Password">
             <img class="" src="img/passwordeye.svg" id="togglePassword"
                 style="margin-left: -30px; cursor: pointer;margin-top: 10px;"></i>
         </div>
-        <div class="p-2 row d-flex justify-content-center">
+        <div class="p-2   d-flex justify-content-center">
             <p>I have read the <a href="http://#">Privacy Policy</a> <input type="checkbox" name="privacy-policy"
                     id="privacy-policy"></p>
         </div>
@@ -66,6 +66,7 @@
     <div class="d-flex justify-content-center cursorhover">
         <img id="signupbtn" src="./img/getstarted.svg" alt="Login button" />
     </div>
+    <br><br><br>
 
     <!-- Inline firebase script -->
     <script type="module">
