--- a/www/choosetopic.html
+++ b/www/choosetopic.html
@@ -13,48 +13,48 @@
     <title>MindScape</title>
 </head>
 
-<body class="p-5">
+<body class="">
     <div>
         <img id="backarrow" class="cursorhover" src="./img/backarrow.svg" alt="<-" />
     </div>
     <div class="p-3">
-        <h1>What Brings you to Silent Moon?</h1>
+        <h1 class=" d-flex justify-content-start">What Brings you to Silent Moon?</h1>
         <br>
-        <p>choose a topic to focuse on:</p>
+        <p class=" d-flex justify-content-start">choose a topic to focuse on:</p>
     </div>
 
-    <div class="container-fluid row ">
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #F9B08F;">
+    <div class="container-fluid row d-flex justify-content-center">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F9B08F;">
             <img src="./img/increasehappiness.svg" alt="increasehappiness Image">
-            <p class="lightbg p-2">Chat Bot</p>
+            <p class="lightbg p-2 text-center">Chat Bot</p>
         </div>
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #F9B08F;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F9B08F;">
             <img src="./img/increasehappiness.svg" alt="increasehappiness Image">
-            <p class="lightbg p-2">Home</p>
+            <p class="lightbg p-2 text-center">Home</p>
         </div>
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #8E97FD;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #8E97FD;">
             <img src="./img/reducestress.svg" alt="reducestress Image">
-            <p class="darkbg p-2">Reduce Stress</p>
+            <p class="darkbg p-2 text-center">Reduce Stress</p>
         </div>
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #F36F5B;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F36F5B;">
             <img src="./img/improveperformance.svg" alt="improveperformance Image">
-            <p class="darkbg p-2">Improve Performance</p>
+            <p class="darkbg p-2 text-center">Improve Performance</p>
         </div>
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #F9B08F;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F9B08F;">
             <img src="./img/increasehappiness.svg" alt="increasehappiness Image">
-            <p class="lightbg p-2">Increase Happiness</p>
+            <p class="lightbg p-2 text-center">Increase Happiness</p>
         </div>
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #FFCF87;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #FFCF87;">
             <img src="./img/reduceanxiety.svg" alt="reduceanxiety Image">
-            <p class="lightbg p-2">Reduce Anxiety</p>
+            <p class="lightbg p-2 text-center">Reduce Anxiety</p>
         </div>
-        <div class="col-sm-auto tiles m-3 cursorhover" style="background-color: #6BB28E;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #6BB28E;">
             <img src="./img/personalgrowth.svg" alt="personalgrowth Image">
-            <p class="darkbg p-2">Personal Growth</p>
+            <p class="darkbg p-2 text-center">Personal Growth</p>
         </div>
-        <div class="col-sm-auto tiles m-3 p-1 cursorhover" style="background-color: #4E5668;">
+        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #4E5668;">
             <img src="./img/bettersleep.svg" alt="bettersleep Image">
-            <p class="darkbg p-2">Better Sleep</p>
+            <p class="darkbg p-2 text-center">Better Sleep</p>
         </div>
 
     </div>
