--- a/www/login.html
+++ b/www/login.html
@@ -13,7 +13,7 @@
     <title>MindScape</title>
 </head>
 
-<body>
+<body class="">
     <div class="p-2 m-3 bg">
         <div>
             <img class="cursorhover" src="./img/backarrow.svg" alt="backarrow image">
