--- a/www/signINandUp.html
+++ b/www/signINandUp.html
@@ -43,7 +43,7 @@
 </head>
 
 <body class="">
-    <div class="ss d-flex justify-content-center">
+    <div class="ss d-flex justify-content-center p-5">
         <h1>MindScape</h1>
     </div>
 
