--- a/www/login.html
+++ b/www/login.html
@@ -16,54 +16,187 @@
 <body class="">
     <div class="p-2 m-3 bg">
         <div>
-            <img class="cursorhover" src="./img/backarrow.svg" alt="backarrow image">
+            <img id="backarrow" class="cursorhover" src="./img/backarrow.svg" alt="backarrow image" />
         </div>
         <h1 class="p-2 row d-flex justify-content-center">Welcome Back!</h1>
         <div class="d-flex justify-content-center">
             <img class="p-2 row d-inline-flex justify-content-center cursorhover" src="./img/facebooklogin.svg"
-                alt="facebooklogin button">
+                alt="facebooklogin button" />
         </div>
         <div class="d-flex justify-content-center">
             <img class="p-2 row d-flex justify-content-center cursorhover" src="./img/googlelogin.svg"
-                alt="googlelogin button">
+                alt="googlelogin button" />
         </div>
     </div>
-    <br>
+    <br />
     <div class="p-2 row d-flex justify-content-center">
         <p>OR LOG IN WITH EMAIL</p>
     </div>
-    <br>
+    <br />
     <div>
         <div class="p-2 row d-flex justify-content-center">
-            <input class=" emailForm" type="email" name="emailAddress" id="emailAddress"
-                placeholder="      Email Address">
+            <input class="emailForm" type="email" name="emailAddress" id="email" placeholder="      Email Address" />
         </div>
-        <div class="p-2 row d-flex justify-content-center"> <input class="emailForm" type="password" name="password"
-                id="password" placeholder="     Password">
+        <div class="p-2 row d-flex justify-content-center">
+            <input class="emailForm" type="password" name="password" id="password" placeholder="     Password" />
         </div>
     </div>
     <div class="d-flex justify-content-center m-2">
-        <img id="loginbtn" class="cursorhover" src="./img/loginimage.svg" alt="Login button">
+        <img id="loginbtn" class="cursorhover" src="./img/loginimage.svg" alt="Login button" />
     </div>
+    <p id="logoutbtn">Logout</p>
     <div class="d-flex justify-content-center">
         <p class="cursorhover">Forgot password?</p>
     </div>
     <div class="d-flex justify-content-center">
-        <p>ALREADY HAVE AN ACCOUNT ? <a href="signINandUp.html">SIGN UP</a></p>
+        <p>DON'T HAVE AN ACCOUNT ? <a href="signup.html">SIGN UP</a></p>
     </div>
 
-
+    <!-- Debug : only for Development -->
+    <div class="d-flex justify-content-center ">
+        <button id="logoutbtn" class="btn btn-info">Logout</button>
+        <button id="adminlogin" class="btn btn-warning">Admin Login</button>
+    </div>
+    <div class="d-flex justify-content-center ">
+        <p>Current user : <span id="currentuser">NULL</span></p>
+    </div>
+    <!-- Debug : only for Development -->
 
     <!-- Inline JS Code -->
-    <script>
-        document.getElementById('loginbtn').addEventListener('click', choosetopic)
-        function choosetopic() {
-            window.location = "choosetopic.html"
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
+        import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged, signInWithEmailAndPassword, signOut, updateProfile } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyBu9TWYZbOMZBHPlUqj4sI3_KIFp8VLuak",
+            authDomain: "mindscape-85092.firebaseapp.com",
+            projectId: "mindscape-85092",
+            storageBucket: "mindscape-85092.appspot.com",
+            messagingSenderId: "762557166448",
+            appId: "1:762557166448:web:bf91de7d4e984afbd115b5",
+            measurementId: "G-WJKTVQ1Q58"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const auth = getAuth(app);
+
+        document.getElementById('loginbtn').addEventListener('click', loginuser)
+        // document.getElementById('signupbtn').addEventListener('click', choosetopic)
+
+
+
+        function loginuser() {
+            let email = document.getElementById('email').value
+            let password = document.getElementById('password').value
+
+            const auth = getAuth();
+            signInWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    // Signed in 
+                    const user = userCredential.user;
+                    console.log(user);
+                    window.location = "choosetopic.html";
+                    // ...
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                    alert(`Error Occured ${errorMessage}`)
+                });
         }
+        // Observer for user auth
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // User is signed in, see docs for a list of available properties
+                // https://firebase.google.com/docs/reference/js/firebase.User
+                const uid = user.uid;
+                console.log(user);
+                // ...
+            } else {
+                // User is signed out
+                // ...
+            }
+        });
+        document
+            .getElementById("logoutbtn")
+            .addEventListener("click", logoutuser);
+
+        function logoutuser() {
+            signOut(auth).then(() => {
+                alert(`User Logged Out`)
+                document.getElementById("currentuser").innerText = "null";
+            }).catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                alert(`Error Occured ${errorMessage}`)
+            });
+        }
+        // document
+        //     .getElementById("loginbtn")
+        //     .addEventListener("click", choosetopic);
+        function choosetopic() {
+            window.location = "choosetopic.html";
+        }
+        // Back Button Code
+        document
+            .getElementById("backarrow")
+            .addEventListener("click", backsignup);
+        function backsignup() {
+            window.location = "signup.html";
+        }
+
+
+        // Debug : only for Development
+        document
+            .getElementById("logoutbtn")
+            .addEventListener("click", logoutuser);
+
+        function logoutuser() {
+            signOut(auth).then(() => {
+                alert(`User Logged Out`)
+            }).catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                alert(`Error Occured ${errorMessage}`)
+            });
+        }
+
+
+        document.getElementById('adminlogin').addEventListener('click', adminlogin);
+        function adminlogin() {
+            let emailadmin = "tanmay.gurav@welingkar.org";
+            let passwordadmin = "123456"
+            signInWithEmailAndPassword(auth, emailadmin, passwordadmin)
+                .then((userCredential) => {
+                    // Signed in 
+                    const user = userCredential.user;
+                    console.log(user);
+                    window.location = "choosetopic.html";
+                    // ...
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                    alert(`Error Occured ${errorMessage}`)
+                });
+        }
+        // Debug : only for Development
+
     </script>
+
     <!-- End Inline JS Code -->
-
-
 
     <!-- Bootstrap JS  -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
