--- a/www/choosetopic.html
+++ b/www/choosetopic.html
@@ -24,9 +24,10 @@
     </div>
 
     <div class="container-fluid row d-flex justify-content-center">
-        <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F9B08F;">
+        <div id="chatbotbtn" class=" grayscale col-sm-12-sm tiles tilebox m-1 cursorhover"
+            style="background-color: #F9B08F;">
             <img src="./img/increasehappiness.svg" alt="increasehappiness Image">
-            <p class="lightbg p-2 text-center">Chat Bot</p>
+            <p class=" lightbg p-2 text-center">Chat Bot</p>
         </div>
         <div class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F9B08F;">
             <img src="./img/increasehappiness.svg" alt="increasehappiness Image">
@@ -59,6 +60,15 @@
 
     </div>
 
+    <!-- Debug : only for Development -->
+    <div class="d-flex justify-content-center ">
+        <button id="logoutbtn" class="btn btn-info">Logout</button>
+        <button id="adminlogin" class="btn btn-warning">Admin Login</button>
+    </div>
+    <div class="d-flex justify-content-center ">
+        <p>Current user : <span id="currentuser">NULL</span></p>
+    </div>
+    <!-- Debug : only for Development -->
 
 
     <!-- Inline JavaScript -->
@@ -69,34 +79,133 @@
             window.location = "signup.html"
         }
         // Chat bot code
-        !(function () {
-            let e = document.createElement("script"),
-            t = document.head || document.getElementsByTagName("head")[0];
-            (e.src =
-            "https://cdn.jsdelivr.net/npm/rasa-webchat@1.0.1/lib/index.js"),
-            // Replace 1.x.x with the version that you want
-            (e.async = !0),
-            (e.onload = () => {
-                window.localStorage.clear();
-                window.WebChat.default(
-                {
-                    initPayload: "/greet",
-                    title: "SilentMoon",
-                    subtitle: "Say hi to get started!",
-                    profileAvatar: "",
-                    customData: { language: "en" },
-                    socketUrl: "https://22ec-27-106-107-116.ngrok.io", //192.168.0.107  //http://localhost:5005  //https://dc59-111-119-197-122.ngrok.io 
-                    socketPath: "/socket.io",
-                    hideWhenNotConnected: false,
-                    storage: "session",
-                    // add other props here
-                },
-                null
-                );
-            }),
-            t.insertBefore(e, t.firstChild);
-        })();
+        // !(function () {
+        //     let e = document.createElement("script");
+        //     t = document.head || document.getElementsByTagName("head")[0];
+        //     (e.src =
+        //     "https://cdn.jsdelivr.net/npm/rasa-webchat@1.0.1/lib/index.js");
+        //     // Replace 1.x.x with the version that you want
+        //     (e.async = !0),
+        //     (e.onload = () => {
+
+        //         window.localStorage.clear();
+        //         window.WebChat.default(
+        //         {
+        //             initPayload: "/greet",
+        //             title: "MindScape",
+        //             subtitle: "Say hi to get started!",
+        //             profileAvatar: "",
+        //             customData: { language: "en" },
+        //             socketUrl: "https://22ec-27-106-107-116.ngrok.io", //192.168.0.107  //http://localhost:5005  //https://dc59-111-119-197-122.ngrok.io 
+        //             socketPath: "/socket.io",
+        //             hideWhenNotConnected: false,
+        //             storage: "session",
+        //             // add other props here
+        //         },
+        //         null
+        //         );
+        //         document.getElementById('chatbotbtn').style.filter="grayscale(0%)";
+        //     });
+        //     t.insertBefore(e, t.firstChild);
+        // })();
+
+        document.getElementById('chatbotbtn').addEventListener("click", fullscreenchatbot)
+        function fullscreenchatbot() {
+            window.location = "chatbot.html"
+        }
     </script>
+
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
+        import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged, signInWithEmailAndPassword, signOut, updateProfile } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyBu9TWYZbOMZBHPlUqj4sI3_KIFp8VLuak",
+            authDomain: "mindscape-85092.firebaseapp.com",
+            projectId: "mindscape-85092",
+            storageBucket: "mindscape-85092.appspot.com",
+            messagingSenderId: "762557166448",
+            appId: "1:762557166448:web:bf91de7d4e984afbd115b5",
+            measurementId: "G-WJKTVQ1Q58"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const auth = getAuth(app);
+
+
+        // Observer for user auth
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // User is signed in, see docs for a list of available properties
+                // https://firebase.google.com/docs/reference/js/firebase.User
+                const uid = user.uid;
+                console.log(user);
+                if (user !== null) {
+                    user.providerData.forEach((profile) => {
+                        console.log("Sign-in provider: " + profile.providerId);
+                        console.log("  Provider-specific UID: " + profile.uid);
+                        console.log("  Name: " + profile.displayName);
+                        console.log("  Email: " + profile.email);
+                        document.getElementById("currentuser").innerText = profile.email;
+                    });
+                }
+            } else {
+                // User is signed out
+
+                console.log("no user logged in");
+            }
+        });
+
+
+        // Debug : only for Development
+        document
+            .getElementById("logoutbtn")
+            .addEventListener("click", logoutuser);
+
+        function logoutuser() {
+            signOut(auth).then(() => {
+                alert(`User Logged Out`)
+                document.getElementById("currentuser").innerText = "null";
+            }).catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                alert(`Error Occured ${errorMessage}`)
+            });
+        }
+
+
+        document.getElementById('adminlogin').addEventListener('click', adminlogin);
+        function adminlogin() {
+            let emailadmin = "tanmay.gurav@welingkar.org";
+            let passwordadmin = "123456"
+            signInWithEmailAndPassword(auth, emailadmin, passwordadmin)
+                .then((userCredential) => {
+                    // Signed in 
+                    const user = userCredential.user;
+                    console.log(user);
+                    window.location = "choosetopic.html";
+                    // ...
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.log(`Error code : ${errorCode} \n Error message ${errorMessage}`);
+                    alert(`Error Occured ${errorMessage}`)
+                });
+        }
+        // Debug : only for Development
+
+    </script>
+
     <!-- End Inline JavaScript -->
 
     <!-- Bootstrap JS  -->
